Add CountersStat, a terminal tool for the counters file
CountersStat prints the counters a process maintains in its memory-mapped
counters.dat, with AeronStat's usage semantics. It reads the file from a
separate process, so it does not touch the one being observed.

The tool is domain-free: it only knows CountersRegistry's layout, Key/KeyCodec
and CounterVisibility, so it belongs next to the library that writes the file
rather than in any one service. It sits in io.scalecube.metrics, beside
CountersRegistry, following Aeron's ArchiveTool/ClusterTool convention of
keeping a tool in the package and artifact of the subsystem it reads. That also
means it ships wherever the library ships, so an operator can run it from the
pod's classpath without adding a dependency.

Uses the LayoutDescriptor reader helpers that had no caller:

- isCountersHeaderLengthSufficient / isCountersFileLengthSufficient reject a
  truncated or partially written file instead of mapping it and reading past
  its end. isCountersFileLengthSufficient compared the two lengths the wrong
  way round, so it reported a truncated file as sufficient; fixed, with tests.
  Aeron's equivalent, CncFileDescriptor.isCncFileLengthSufficient, reads
  fileLength >= required. Reverting the fix makes the new tests fail with the
  IndexOutOfBoundsException the check exists to prevent.
- The header marks the recorded pid (not running) when that process is gone,
  so a counters file left behind by a crash no longer prints a healthy-looking
  view with a growing uptime. The liveness check is injected so it is driven
  deterministically in tests.

Also:

- CounterVisibility.find(byte) returns null for an unknown value; get(byte)
  keeps throwing and now delegates to it. An out-of-process reader must render
  a file written by a newer or a corrupted writer instead of failing, and the
  tool no longer re-implements the lookup.
- Counter values and the uptime format in Locale.ROOT, so grouping separators
  do not vary by envi