@@ -12,3 +12,53 @@ or any low-latency environment.
 `Context` settings come from a `java.util.Properties` object; the no-arg constructor reads
 `System.getProperties()`. Any property set to `@null` is treated as not set (default applies), so a
 layered or templated config can unset an inherited value.
+
+## CountersStat
+
+`io.scalecube.metrics.CountersStat` prints the counters a process maintains in its
+memory-mapped `counters.dat`. The file lives in shared memory, so the tool reads it from a separate
+process without touching the one being observed. Agrona reads the mapped file through
+`jdk.internal.misc.Unsafe`, so the tool needs the same `--add-opens` the observed process runs with:
+
+```
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -cp "app.jar:lib/*" \
+  io.scalecube.metrics.CountersStat
+```
+
+```
+15:23:16 - Counters Stat (/dev/shm/counters-app), pid 210056, started 2026-09-16 15:23:13, up 0:00:03
+======================================================================
+    0:                  1,204,551 - duty_cycle_max_time_ns{roleName=WORKER}
+    1:                     12,483 - errors_total{reason=BACK_PRESSURE, roleName=SENDER}
+    2:                          3 - resources_total{action=ADDED, kind=connection}
+    3:                          0 - tcp.address=0.0.0.0:11080{counterVisibility=PRIVATE}
+--
+```
+
+A counter name on its own is not unique - the same name is allocated many times with different tags
+
+- so the tags are part of the identity and are rendered next to the name, sorted by tag name so
+  consecutive redraws are diffable.
+
+| Argument              | Meaning                            | Default |
+|-----------------------|------------------------------------|---------|
+| `delay=<seconds>`     | redraw interval                    | `1`     |
+| `watch=<true\|false>` | loop or single shot                | `true`  |
+| `name=<regex>`        | filter on counter name             | -       |
+| `type=<regex>`        | filter on `typeId`                 | -       |
+| `tag=<regex>`         | filter on any rendered `tag=value` | -       |
+
+`-?` / `-h` / `-help` prints usage. Filters are `Pattern.find()` and are applied together. The
+counters directory is resolved through `CountersRegistry.Context`, so the property and the default
+are the observed process's own:
+`-Dscalecube.metrics.counters.countersDirectoryName=<dir>`.
+
+The header carries the `pid` and the start timestamp recorded in the file, and marks the pid
+`(not running)` when that process is gone - a counters file left behind by a crashed process does
+not look healthy. A file that is truncated, not yet initialised, or shorter than its own header
+declares is reported rather than read. When the file is missing, the tool lists any directory next
+to the one asked for, next to the library default, or in the temp directory that does hold a
+`counters.dat` - the case where the observed process runs as a different user.
+
+Unlike `CountersReaderAgent`, the tool prints `PRIVATE`-visibility counters too: that is where
+`PropertiesRegistry` puts values such as a bound address, and an operator wants to see them.
